--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="clear"></div>
 		
 		<div class="container body-content app-container">
-			<div ng-view></div>
+			<div data-ng-view></div>
 		</div>
 		
 		<footer>
@@ -58,7 +58,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="jquery-1.11.1/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="jquery-ui-1.11.0/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="portfolio.js"></script>
 	<script type="text/javascript" src="angular.min.js"></script>
 	<script type="text/javascript" src="angular-route.js"></script>
 	<script type="text/javascript" src="index.js"></script>
