Update from dev portfolio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Portfolio | Ryan Murray</title>
 	<meta name="description" content="A place to demonstrate professional experience." >
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- version:20150102102500 -->
 </head>
 
 
@@ -29,8 +30,8 @@
 			<div class="fcont left orbitron">
 				<a href="#/home">home</a>
 				<a href="#/about">about</a>
-				<a href="#/portfolio">portfolio</a>
-				<a href="#/codesamples">code samples</a>
+				<a href="#/projects">projects</a>
+				<a href="#/codesamples">code</a>
 				<a href="#/accolades">accolades</a>
 			</div>
 			<div class="fcont mid">
